# vibenes

./: .gitignore  CLAUDE.md  CONTINUATION_2026-04-27.md  Cargo.toml  FDS_PHASE3_WIP.md  PHASE5_WIP.md  PHASE6_WIP.md  README.md  build.rs  run
.github/workflows/: release.yml
assets/fonts/: VT323-OFL.txt
assets/shaders/: README.md  SLANG-SHADERS-NOTICE.md
assets/shaders/crt-guest-advanced-fast/: LICENSE  crt-guest-advanced-fast.slangp
assets/shaders/jintenji-crt/: LICENSE  README.md  crt-tetchi-grill.slangp  crt-tetchi-shadowmask.slangp  crt-tetchi-slotmask.slangp  gun_tetchi_pass.slang  phosphor_tetchi_grill.slang  phosphor_tetchi_shadowmask.slang  phosphor_tetchi_slotmask.slang
data/: nes_db.csv
docs/accuracy_coin/: idr_crash.md
docs/plans/: microphone_input.md
docs/snes/: smw-upload-wedge.md
notes/: gfx_color_space.md
notes/phase10/: follow_ups.md
notes/phase11/: dma_iter_alignment.md
notes/phase6/: 08_irq_timing.md  09_reset_timing.md  10_len_halt_timing.md  11_len_reload_timing.md
notes/phase7/: 3_nmi_and_irq.md  3_nmi_and_irq_addendum.md  4_irq_and_dma.md  5_branch_delays_irq.md
notes/phase9/: dmc_double_read.md  follow_ups.md
src/: app.rs  apu.rs  audio.rs  blargg_2005_scan.rs  bus.rs  clock.rs  config.rs  crc32.rs  debug_overlay.rs  gamedb.rs  input.rs  lib.rs  main.rs  nes.rs  ppu.rs  rom.rs  save.rs  save_header.rs  screenshot.rs  settings.rs  shader_catalog.rs  video.rs
src/apu/: dmc.rs  envelope.rs  frame_counter.rs  length.rs  mod.rs  noise.rs  pulse.rs  sweep.rs  triangle.rs
src/core/: mod.rs  system.rs
src/cpu/: flags.rs  mod.rs  ops.rs  trace.rs
src/fds/: bios.rs  image.rs  ips.rs  mod.rs
src/gfx/: mod.rs  shader.rs
src/gfx/shaders/: passthrough.wgsl
src/mapper/: axrom.rs  bandai_fcg.rs  cnrom.rs  eeprom_24c0x.rs  fds.rs  fds_audio.rs  fme7.rs  gxrom.rs  irem_g101.rs  jaleco_ss88006.rs  mapper037.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  mod.rs  n163_audio.rs  namco163.rs  nrom.rs  rambo1.rs  sunsoft5b_audio.rs  taito_tc0190.rs  uxrom.rs  vrc1.rs  vrc2_4.rs  vrc3.rs  vrc6.rs  vrc6_audio.rs  vrc7.rs  vrc7_opll.rs
src/nes/: bus.rs  clock.rs  mod.rs  ppu.rs  rom.rs
src/nes/apu/: dmc.rs  envelope.rs  frame_counter.rs  length.rs  mod.rs  noise.rs  pulse.rs  sweep.rs  triangle.rs
src/nes/cpu/: flags.rs  mod.rs  ops.rs  trace.rs
src/nes/fds/: image.rs  ips.rs  mod.rs
src/nes/mapper/: ave_nina.rs  axrom.rs  bandai_74161.rs  bandai_datach.rs  bandai_fcg.rs  bandai_karaoke.rs  bandai_lz93d50_sram.rs  bandai_oeka_kids.rs  bnrom.rs  cnrom.rs  cnrom_protect.rs  codemasters_bf9096.rs  codemasters_bf909x.rs  color_dreams.rs  cprom.rs  eeprom_24c0x.rs  fds.rs  fds_audio.rs  flash_sst39sf040.rs  fme7.rs  gxrom.rs  irem_74x161.rs  irem_g101.rs  irem_h3001.rs  irem_lrog017.rs  irem_tam_s1.rs  jaleco_jf05.rs  jaleco_jf10.rs  jaleco_jf11_14.rs  jaleco_jf13.rs  jaleco_jf17.rs  jaleco_ss88006.rs  mapper037.rs  mapper047.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  mod.rs  (+30 more)
src/save_state/: apu.rs  bus.rs  cpu.rs  mapper.rs  mod.rs  ppu.rs
src/snes/: bus.rs  mod.rs  rom.rs
src/snes/cpu/: bus.rs  mod.rs  tests.rs
src/snes/smp/: bus.rs  dsp.rs  harness.rs  ipl.rs  mod.rs  state.rs  tests.rs
src/snes/smp/dsp/: brr.rs  echo.rs  envelope.rs  mixer.rs  voice.rs  voice_sampler.rs
src/ui/: commands.rs  menubar.rs  menus.rs  mod.rs  recent.rs  recent_shaders.rs
tests/: battery_save.rs  blargg_apu_2005.rs  dmc_dma_during_read4.rs  peterlemon_spc700.rs  save_state_integration.rs
tools/: mesen_probe.lua  mesen_trace.lua  mesen_trace_acc.lua  trace_mesen.sh  trace_mesen_acc.sh
