[package]
name = "vibenes"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Clean-room, cycle-accurate NES emulator in Rust"
build = "build.rs"

[build-dependencies]
# Compiles the vendored emu2413 (YM2413/VRC7 OPLL) C source into a
# static lib that we link against - see build.rs and vendor/emu2413/.
cc = "1"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# Phase 11+: save states. `serde` derives the on-disk schema, `bincode 2`
# encodes it deterministically (varint integers, no schema bytes - the
# version field in our outer `StateFile` does the schema rev). `bincode`
# pulls in the `serde` feature to accept derive-based types directly.
# `serde-big-array` covers fixed arrays > 32 elements (palette 32, OAM
# 256, VRAM/RAM 0x800, open-bus refresh `[u64; 8]`) which serde derives
# refuse by default. `thiserror` already ships transitively via wgpu et
# al; pinning it here keeps the typed-error enum honest.
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
serde-big-array = "0.5"
thiserror = "2"
# Phase 6: windowed emulator. winit 0.30 introduced `ApplicationHandler` -
# the older closure-based API is gone. wgpu + pollster are for the
# passthrough render pipeline; we deliberately don't use the `pixels`
# crate so post-process shader stages (CRT / NTSC filter / scanlines)
# can plug in later without fighting `pixels`' built-in blit.
winit = "0.30"
wgpu = "29"
pollster = "0.4"
# Audio output (Phase 7 audio-pacing prerequisite). `cpal` owns the host
# audio stream; `blip_buf` is Blargg's band-limited step synthesizer - the
# standard choice for NES/retro emulator resampling (1.789773 MHz APU →
# host sample rate, typically 48 kHz). `ringbuf` is the lock-free SPSC
# queue between the emulator thread and cpal's audio-callback thread.
cpal = "0.15"
blip_buf = "0.1"
ringbuf = "0.4"
# Phase 6C: menu overlay. egui is an immediate-mode UI toolkit; `egui-wgpu`
# adapts it to our existing wgpu 29 pipeline as an extra render pass on the
# same swapchain texture, and `egui-winit` translates winit events into the
# egui input model (keyboard focus, cursor, clipboard). egui 0.34 is the
# line that targets wgpu 29 + winit 0.30.
egui = "0.34"
egui-wgpu = { version = "0.34", features = ["winit"] }
egui-winit = "0.34"
# Native file picker. `rfd` wraps the platform dialog (GTK/portal on
# Linux, NSOpenPanel on macOS, IFileOpenDialog on Windows). We use the
# synchronous `pick_file` - it blocks the event loop briefly, which
# the 300 ms audio ring pre-buffer (see src/audio.rs) absorbs without
# clicks. An async variant is available if we ever need it.
rfd = "0.15"
# Gamepad input. `gilrs` is pure-Rust and cross-platform (Linux evdev,
# Windows XInput + DInput, macOS IOKit) with no extra native deps. We
# poll state once per frame and OR the result with keyboard bits into
# controller 1; controller 2 is still future work. Fixed mapping for
# now - the overlay's remapping UI is a later pass.
gilrs = "0.11"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
