[package]
name = "vibenes"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Clean-room, cycle-accurate NES emulator in Rust"
build = "build.rs"

[build-dependencies]
# Compiles the vendored emu2413 (YM2413/VRC7 OPLL) C source into a
# static lib that we link against - see build.rs and vendor/emu2413/.
cc = "1"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# Phase 11+: save states. `serde` derives the on-disk schema, `bincode 2`
# encodes it deterministically (varint integers, no schema bytes - the
# version field in our outer `StateFile` does the schema rev). `bincode`
# pulls in the `serde` feature to accept derive-based types directly.
# `serde-big-array` covers fixed arrays > 32 elements (palette 32, OAM
# 256, VRAM/RAM 0x800, open-bus refresh `[u64; 8]`) which serde derives
# refuse by default. `thiserror` already ships transitively via wgpu et
# al; pinning it here keeps the typed-error enum honest.
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
serde-big-array = "0.5"
thiserror = "2"
# Phase 6: windowed emulator. winit 0.30 introduced `ApplicationHandler` -
# the older closure-based API is gone. wgpu + pollster are for the
# passthrough render pipeline; we deliberately don't use the `pixels`
# crate so post-process shader stages (CRT / NTSC filter / scanlines)
# can plug in later without fighting `pixels`' built-in blit.
winit = "0.30"
wgpu = "29"
pollster = "0.4"
# Audio output (Phase 7 audio-pacing prerequisite). `cpal` owns the host
# audio stream; `blip_buf` is Blargg's band-limited step synthesizer - the
# standard choice for NES/retro emulator resampling (1.789773 MHz APU →
# host sample rate, typically 48 kHz). `ringbuf` is the lock-free SPSC
# queue between the emulator thread and cpal's audio-callback thread.
cpal = "0.15"
blip_buf = "0.1"
ringbuf = "0.4"
# Phase 6C: menu overlay. egui is an immediate-mode UI toolkit; `egui-wgpu`
# adapts it to our existing wgpu 29 pipeline as an extra render pass on the
# same swapchain texture, and `egui-winit` translates winit events into the
# egui input model (keyboard focus, cursor, clipboard). egui 0.34 is the
# line that targets wgpu 29 + winit 0.30.
egui = "0.34"
egui-wgpu = { version = "0.34", features = ["winit"] }
egui-winit = "0.34"
# Native file picker. `rfd` wraps the platform dialog (GTK/portal on
# Linux, NSOpenPanel on macOS, IFileOpenDialog on Windows). We use the
# synchronous `pick_file` - it blocks the event loop briefly, which
# the 300 ms audio ring pre-buffer (see src/audio.rs) absorbs without
# clicks. An async variant is available if we ever need it.
rfd = "0.15"
# Gamepad input. `gilrs` is pure-Rust and cross-platform (Linux evdev,
# Windows XInput + DInput, macOS IOKit) with no extra native deps.
# Bindings (keyboard + gamepad, P1 + P2) live in `crate::input` and
# persist to `~/.config/vibenes/input.toml`; the polling layer reads
# from that data model rather than a hardcoded match.
gilrs = "0.11"
# Persistence for `~/.config/vibenes/input.toml` (input bindings).
# Pulled in here rather than reaching for serde_json so the file is
# human-editable - users can swap a binding by hand without booting
# the emulator. Pinned to 0.8 (the post-1.0-stabilization line).
toml = "0.8"
# PNG encoder for the F5 screenshot capture path. Native NES
# framebuffer (256x240 RGBA) gets written as-is - no surface
# readback, no PAR scaling. Pure-Rust; no system dependency.
png = "0.17"
# RetroArch shader runtime. Reads .slangp/.glslp/.cgp presets and
# runs the multi-pass filter chain on our existing wgpu pipeline.
# We pull just `runtime-wgpu` + `reflect-naga` + presets/preprocess
# (the wgpu runtime needs naga-based reflection for SPIR-V → WGSL).
# `presets` and `preprocess` parse the preset file and the included
# shader sources before they hit the runtime.
# RetroArch shader runtime. We pull the sub-crates directly rather
# than the `librashader` umbrella because the umbrella has its own
# optional `wgpu` dep (used only as a feature-flag chain) which
# pulls in a second copy of wgpu at the upstream-pinned major
# version (28) alongside our stack's wgpu 29. Importing the sub-crates
# directly keeps the dep tree single-version. `stable` features opt
# out of nightly-only `feature(impl_trait_in_assoc_type)` and
# `feature(type_alias_impl_trait)` gates so we build on stable rustc.
librashader-common = { version = "0.10", features = ["wgpu"] }
librashader-presets = "0.10"
librashader-preprocess = "0.10"
librashader-runtime-wgpu = { version = "0.10", features = ["stable"] }
librashader-reflect = { version = "0.10", default-features = false, features = [
    "wgsl",
    "stable",
] }

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1

# Vendored librashader. Upstream librashader-runtime-wgpu 0.10.1 (the
# latest stable, also the master branch as of this commit) pins
# wgpu = "28". egui-wgpu 0.34 - the line we use - is on wgpu 29, and
# egui-wgpu skipped wgpu 28 entirely (0.33 was on 27, 0.34 jumped to
# 29). No combination of upstream releases lines up. We vendor only
# the two librashader crates that actually touch wgpu types
# (librashader-common via the `wgpu` feature, librashader-runtime-wgpu
# itself) and bump them to wgpu 29 in place. Everything else
# (presets, reflect, preprocess, runtime, cache) stays on crates.io
# unchanged - those crates don't see wgpu in their public API. See
# vendor/README.md for the upstream-tracking notes.
[patch.crates-io]
librashader-common = { path = "vendor/librashader-common" }
librashader-runtime-wgpu = { path = "vendor/librashader-runtime-wgpu" }
